--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ng6-starter",
   "version": "0.0.1",
   "description": "Starter for Angular + ES6 + (Webpack or JSPM)",
-  "main": "index.js",
-  "dependencies": {
-    "angular": "^1.5.0",
-    "normalize.css": "^3.0.3"
+  "main": "app.bundle.js",
+  "dependencies": {},
+  "peerDependencies": {
+    "angular": "^1.7.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
@@ -52,6 +52,7 @@
   },
   "scripts": {
     "build": "gulp webpack",
+    "build-serve": "npx http-server ./dist",
     "component": "gulp component",
     "serve": "gulp serve",
     "start": "gulp serve",
