--- a/package.json
+++ b/package.json
@@ -4,11 +4,6 @@
   "description": "Starter for Angular + ES6 + (Webpack or JSPM)",
   "main": "dist/app.bundle.js",
   "dependencies": {},
-  "peerDependencies": {
-    "angular": "^1.7.8",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0"
-  },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
     "babel-core": "^6.7.7",
@@ -24,12 +19,14 @@
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.19.0",
     "del": "^2.2.0",
+    "dotenv": "^8.2.0",
     "fs-walk": "0.0.1",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^3.0.0",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^1.7.0",
+    "http-proxy-middleware": "^1.0.0",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
@@ -37,7 +34,6 @@
     "karma-mocha-reporter": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.4",
     "karma-webpack": "^1.5.1",
-    "lodash": "^4.11.1",
     "mocha": "^2.3.0",
     "ng-annotate-loader": "0.0.10",
     "node-libs-browser": "^0.5.0",
@@ -50,8 +46,7 @@
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.6.0",
-    "yargs": "^3.9.0",
-    "moment": "^2.24.0"
+    "yargs": "^3.9.0"
   },
   "scripts": {
     "build": "gulp webpack",
