--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-sourcemap-loader": "^0.3.4",
     "karma-webpack": "^1.5.1",
     "mocha": "^2.3.0",
+    "moment": "^2.24.0",
     "ng-annotate-loader": "0.0.10",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^3.13.0",
